--- a/configs/sdk-minimal_defconfig
+++ b/configs/sdk-minimal_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2018.02-git-g548b7c8 Configuration
+# Buildroot 2018.02-git-g7f7b8b2-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_5=y
@@ -156,7 +156,7 @@ BR2_LZCAT="lzip -d -c"
 BR2_TAR_OPTIONS=""
 BR2_DEFCONFIG=""
 BR2_DL_DIR="$(TOPDIR)/dl"
-BR2_HOST_DIR="$(BASE_DIR)/host"
+BR2_HOST_DIR="/opt/sdk"
 
 #
 # Mirrors and Download locations
@@ -211,7 +211,7 @@ BR2_TOOLCHAIN_BUILDROOT=y
 #
 # Toolchain Buildroot Options
 #
-BR2_TOOLCHAIN_BUILDROOT_VENDOR="buildroot"
+BR2_TOOLCHAIN_BUILDROOT_VENDOR="ais"
 # BR2_TOOLCHAIN_BUILDROOT_UCLIBC is not set
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 # BR2_TOOLCHAIN_BUILDROOT_MUSL is not set
