added gdb, tested with openocd
Signed-off-by: Lalith Panditharatne <Lalith@access-is.com>

--- a/configs/sdk-minimal_defconfig
+++ b/configs/sdk-minimal_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2018.02-git-g7f7b8b2-dirty Configuration
+# Buildroot 2018.02-git-g49ae849 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_5=y
@@ -303,7 +303,15 @@ BR2_PACKAGE_HOST_GDB_ARCH_SUPPORTS=y
 #
 # Host GDB Options
 #
-# BR2_PACKAGE_HOST_GDB is not set
+BR2_PACKAGE_HOST_GDB=y
+BR2_PACKAGE_HOST_GDB_TUI=y
+BR2_PACKAGE_HOST_GDB_PYTHON=y
+BR2_PACKAGE_HOST_GDB_SIM=y
+# BR2_GDB_VERSION_7_10 is not set
+BR2_GDB_VERSION_7_11=y
+# BR2_GDB_VERSION_7_12 is not set
+# BR2_GDB_VERSION_8_0 is not set
+BR2_GDB_VERSION="7.11.1"
 
 #
 # Toolchain Generic Options
@@ -595,7 +603,10 @@ BR2_PACKAGE_XZ=y
 # BR2_PACKAGE_DUMA is not set
 # BR2_PACKAGE_FIO is not set
 BR2_PACKAGE_GDB_ARCH_SUPPORTS=y
-# BR2_PACKAGE_GDB is not set
+BR2_PACKAGE_GDB=y
+BR2_PACKAGE_GDB_SERVER=y
+BR2_PACKAGE_GDB_DEBUGGER=y
+BR2_PACKAGE_GDB_TUI=y
 BR2_PACKAGE_GOOGLE_BREAKPAD_ARCH_SUPPORTS=y
 # BR2_PACKAGE_GOOGLE_BREAKPAD is not set
 # BR2_PACKAGE_IOZONE is not set
