--- a/configs/sdk-minimal_defconfig
+++ b/configs/sdk-minimal_defconfig
@@ -442,9 +442,9 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 # BR2_LINUX_KERNEL_CUSTOM_HG is not set
 # BR2_LINUX_KERNEL_CUSTOM_SVN is not set
-BR2_LINUX_KERNEL_CUSTOM_REPO_URL="git@10.1.30.30:Lalith/kernel-4.1.15.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="26719b1"
-BR2_LINUX_KERNEL_VERSION="26719b1"
+BR2_LINUX_KERNEL_CUSTOM_REPO_URL="git@github:Access-IS/kernel-4.1.15.git"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="master"
+BR2_LINUX_KERNEL_VERSION="4.1.15"
 BR2_LINUX_KERNEL_PATCH=""
 # BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
 # BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG is not set
