--- a/configs/sdk-minimal_defconfig
+++ b/configs/sdk-minimal_defconfig
@@ -161,7 +161,7 @@ BR2_HOST_DIR="/opt/sdk"
 #
 # Mirrors and Download locations
 #
-BR2_PRIMARY_SITE="http://10.1.30.30:8000/src"
+# BR2_PRIMARY_SITE="http://10.1.30.30:8000/src"
 # BR2_PRIMARY_SITE_ONLY is not set
 BR2_BACKUP_SITE="http://sources.buildroot.net"
 BR2_KERNEL_MIRROR="https://www.kernel.org/pub"
